[package]
name = "ws_man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ws_man"
path = "src/lib.rs"

[dependencies]
tokio = { version = "*", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

tokio-tungstenite = "*"
log = "0.4.17"
serde = { version = "*", features = ['derive'] }
futures = "*"
futures-util = "*"
rand = "*"
env_logger = "*"
async-trait = "*"

[dev-dependencies]
openssl = "*"
jwt = { version = "*", features = ["openssl"] }
serde_json = "*"
bytes = "*"